# AnyWave
project(AnyWave)
# disable epoching
add_definitions("-DAW_DISABLE_EPOCHING")

SET(AnyWave_SRCS
AnyWave.cpp
AwExportDial.cpp
AwUpdater.cpp
main.cpp
Data/AwDataConnection.cpp
Data/AwDataServer.cpp
Carto/AwDockMapping.cpp
Carto/AwMappingClient.cpp
Carto/AwMappingWidget.cpp
Debug/AwDebugLog.cpp 
Debug/AwDebugLogWidget.cpp 
Display/AwCentralWidget.cpp
Display/AwChannelSelectionDial.cpp 
Display/AwChannelSelectionModel.cpp 
Display/AwDisplay.cpp 
Display/AwDisplaySetup.cpp 
Display/AwDisplaySetupManager.cpp 
Display/AwDSMSaveSetupUI.cpp
Display/AwNewViewDial.cpp
Display/AwSaveAsNewSetupDialog.cpp 
Display/AwScene.cpp 
Display/AwSignalView.cpp 
Display/AwViewSetup.cpp
Filter/AwFilteringManager.cpp 
Filter/AwFilterSettings.cpp 
Filter/AwFilterSwitchButton.cpp
Filter/AwFilterToolBar.cpp
IO/ADES/ADESIO.cpp 
IO/HDF5/HDF5IO.cpp 
IO/HDF5/structs.cpp
IO/MATLAB/MATLABIO.cpp
Marker/AwDockAddMarker.cpp
Marker/AwExtractTriggers.cpp
Marker/AwMarkerFindReplaceUi.cpp 
Marker/AwMarkerListModel.cpp 
Marker/AwMarkerManager.cpp 
Marker/AwMarkerManagerSettings.cpp 
Marker/AwMarkerRule.cpp 
Marker/AwMarkerRuleElement.cpp 
Marker/AwMarkerRuleManageDial.cpp 
Marker/AwMarkerRuleWidget.cpp 
Marker/AwMarkersExportWidget.cpp
Marker/AwMarkerTableView.cpp 
Marker/AwNewMarkerRuleDial.cpp 
Marker/AwPickChannelsDial.cpp
MATPy/AddMarkers.cpp
MATPy/AwMATPyServer.cpp
MATPy/AwPidManager.cpp
MATPy/AwRequestServer.cpp
MATPy/AwResponse.cpp
MATPy/GetData.cpp
MATPy/GetFileInfo.cpp
MATPy/GetICAPanelCapture.cpp
MATPy/GetMarkers.cpp
MATPy/GetPluginInfo.cpp
MATPy/GetScreenCapture.cpp
MATPy/GetTriggers.cpp
MATPy/IsTerminated.cpp
MATPy/SendCommand.cpp
MATPy/SendMessage.cpp
MATPy/SetBeamFormer.cpp
Montage/AwAVGChannel.cpp
Montage/AwChannelListModel.cpp 
Montage/AwMontageDial.cpp 
Montage/AwMontageManager.cpp 
Montage/AwMontageTableView.cpp 
Plugin/AwPluginDial.cpp 
Plugin/AwPluginManager.cpp 
Process/AwConverter.cpp
Process/AwExporter.cpp
Process/AwExporterMarkerModel.cpp
Process/AwExporterSelMarkers.cpp
Process/AwExporterSettings.cpp
Process/AwExportSelChannels.cpp
Process/AwMarkerExporter.cpp
Process/AwMatlabScriptPlugin.cpp 
Process/AwProcessesWidget.cpp 
Process/AwProcessFromMarkersDial.cpp 
Process/AwProcessLog.cpp
Process/AwProcessLogManager.cpp
Process/AwProcessLogWindow.cpp
Process/AwProcessManager.cpp 
Process/AwProcessMarkerModel.cpp 
Process/AwProcessWidget.cpp
Process/AwProgressIndicator.cpp
Process/AwPythonScriptPlugin.cpp 
Process/AwScriptPlugin.cpp 
Process/AwTriggerParser.cpp 
Process/AwTriggerWriter.cpp
Process/AwTriggerEraser.cpp
Process/TPUi.cpp 
Script/AwScript.cpp
Script/AwScriptLog.cpp
Script/AwScriptManager.cpp
Script/AwScriptLogManager.cpp
Script/AwScriptProcessFileInput.cpp
Script/AwScriptWidget.cpp
Script/AwScriptsWidget.cpp
ICA/AwICAChannel.cpp
ICA/AwICAComponents.cpp
ICA/AwICAManager.cpp
ICA/AwICARejectButton.cpp
ICA/AwICASignalItem.cpp
ICA/AwMappingButton.cpp
ICA/AwICAPanel.cpp
ICA/AwPanelItem.cpp
Source/AwSourceChannel.cpp
Source/AwSourceManager.cpp
Widgets/AwAboutAnyWave.cpp 
Widgets/AwCursorMarkerToolBar.cpp 
Widgets/AwDisplaySetupToolBar.cpp 
Widgets/AwDisplayToolBar.cpp 
Widgets/AwDockFilter.cpp 
Widgets/AwFilePropertiesDialog.cpp 
Widgets/AwFilePropertiesModel.cpp 
Widgets/AwFileToolBar.cpp 
Widgets/AwMappingToolBar.cpp 
Widgets/AwMarkersBar.cpp 
Widgets/AwMontageRefWidget.cpp 
Widgets/AwMontageToolBar.cpp 
Widgets/AwPleaseWaitWidget.cpp 
Widgets/AwTriggerParsingDialog.cpp 
Widgets/AwSelectTriggerChannelDialog.cpp
Prefs/AwPreferences.cpp 
Prefs/AwPrefsDial.cpp 
Prefs/AwSettings.cpp 
Epoch/AwAverageDialog.cpp 
Epoch/AwAverageItemWidget.cpp 
Epoch/AwAvgSignalItem.cpp 
Epoch/AwAvgWorker.cpp 
Epoch/AwEditStatsDialog.cpp 
Epoch/AwEpochAverageWidget.cpp 
Epoch/AwEpochCreateUi.cpp 
Epoch/AwEpochManager.cpp 
Epoch/AwEpochModel.cpp 
Epoch/AwEpochThumbNail.cpp 
Epoch/AwEpochThumbCreator.cpp 
Epoch/AwEpochVisuWidget.cpp 
Epoch/AwStatChartWidget.cpp 
Epoch/AwStatsModel.cpp
)

SET(HEADERS ./Data/AwDataConnection.h 
    ./Data/AwDataServer.h 
    ./Carto/AwDockMapping.h 
    ./Carto/AwMappingWidget.h 
    ./Carto/AwMappingClient.h 
    ./Debug/AwDebugLogWidget.h 
    ./Debug/AwDebugLog.h 
    ./Display/AwViewSetup.h 
    ./Display/AwCentralWidget.h 
    ./Display/AwSignalView.h 
    ./Display/AwScene.h 
    ./Display/AwSaveAsNewSetupDialog.h 
    ./Display/AwNewViewDial.h 
    ./Display/AwDSMSaveSetupUI.h 
    ./Display/AwDisplaySetupManager.h 
    ./Display/AwDisplaySetup.h 
    ./Display/AwDisplay.h 
    ./Display/AwChannelSelectionModel.h 
    ./Display/AwChannelSelectionDial.h 
    ./Filter/AwFilterToolBar.h 
    ./Filter/AwFilterSwitchButton.h 
    ./Filter/AwFilterSettings.h 
    ./Filter/AwFilteringManager.h 
    ./IO/ADES/ADESIO.h 
    ./IO/HDF5/structs.h 
    ./IO/HDF5/HDF5IO.h 
    ./IO/MATLAB/MATLABIO.h 
    ./Marker/AwExtractTriggers.h 
    ./Marker/AwMarkersExportWidget.h 
    ./Marker/AwPickChannelsDial.h 
    ./Marker/AwNewMarkerRuleDial.h 
    ./Marker/AwMarkerTableView.h 
    ./Marker/AwMarkerRuleWidget.h 
    ./Marker/AwMarkerRuleManageDial.h 
    ./Marker/AwMarkerRuleElement.h 
    ./Marker/AwMarkerRule.h 
    ./Marker/AwMarkerManagerSettings.h 
    ./Marker/AwMarkerManager.h 
    ./Marker/AwMarkerListModel.h 
    ./Marker/AwMarkerFindReplaceUi.h 
    ./Marker/AwDockAddMarker.h 
    ./MATPy/AwResponse.h 
    ./MATPy/AwPidManager.h 
    ./MATPy/AwRequestServer.h 
    ./MATPy/AwMATPyServer.h 
    ./Montage/AwAVGChannel.h 
    ./Montage/AwMontageTableView.h 
    ./Montage/AwMontageManager.h 
    ./Montage/AwMontageDial.h 
    ./Montage/AwChannelListModel.h 
    ./Plugin/AwPluginManager.h 
    ./Plugin/AwPluginDial.h 
    ./Process/AwExporterTypes.h 
    ./Process/AwMarkerExporter.h 
    ./Process/AwProcessLogManager.h 
    ./Process/AwProcessLog.h 
    ./Process/AwExporter.h 
    ./Process/AwExporterSettings.h 
    ./Process/AwExportSelChannels.h 
    ./Process/AwExporterSelMarkers.h 
    ./Process/AwExporterMarkerModel.h 
    ./Process/AwProcessLogWindow.h 
    ./Process/AwProcessWidget.h 
    ./Process/TPUi.h 
    ./Process/AwTriggerParser.h 
    ./Process/AwTriggerWriter.h 
    ./Process/AwTriggerEraser.h 
    ./Process/AwScriptPlugin.h 
    ./Process/AwPythonScriptPlugin.h 
    ./Process/AwProgressIndicator.h 
    ./Process/AwProcessMarkerModel.h 
    ./Process/AwProcessManager.h 
    ./Process/AwProcessFromMarkersDial.h 
    ./Process/AwProcessesWidget.h 
    ./Process/AwMatlabScriptPlugin.h 
    ./Process/AwConverter.h 
    ./Script/AwScriptsWidget.h 
    ./Script/AwScriptWidget.h 
    ./Script/AwScriptProcessFileInput.h 
    ./Script/AwScriptManager.h 
    ./Script/AwScriptLogManager.h 
    ./Script/AwScriptLog.h 
    ./Script/AwScript.h 
    ./Widgets/AwTriggerParsingDialog.h
    ./Widgets/AwPleaseWaitWidget.h 
    ./Widgets/AwMontageToolBar.h 
    ./Widgets/AwMontageRefWidget.h 
    ./Widgets/AwMarkersBar.h 
    ./Widgets/AwMappingToolBar.h 
    ./Widgets/AwFileToolBar.h 
    ./Widgets/AwFilePropertiesModel.h 
    ./Widgets/AwFilePropertiesDialog.h 
    ./Widgets/AwDockFilter.h 
    ./Widgets/AwDisplayToolBar.h 
    ./Widgets/AwDisplaySetupToolBar.h
    ./Widgets/AwCursorMarkerToolBar.h 
    ./Widgets/AwAboutAnyWave.h 
     ./Widgets/AwSelectTriggerChannelDialog.h  
    ./ICA/AwICAChannel.h 
    ./ICA/AwMappingButton.h 
    ./ICA/AwICAPanel.h 
    ./ICA/AwPanelItem.h 
    ./ICA/AwICAManager.h 
    ./ICA/AwICAComponents.h 
    ./ICA/AwICASignalItem.h 
    ./ICA/AwICARejectButton.h 
    ./AwUpdater.h 
    ./AwExportDial.h 
    ./AnyWave.h 
    ./Prefs/AwPreferences.h 
    ./Prefs/AwSettings.h 
    ./Prefs/AwPrefsDial.h 
    ./Source/AwSourceChannel.h 
    ./Source/AwSourceManager.h 
    ./Epoch/AwEpochManager.h 
    ./Epoch/AwEpochCreateUi.h 
    ./Epoch/AwEpochModel.h 
    ./Epoch/AwEpochVisuWidget.h 
    ./Epoch/AwEpochThumbNail.h 
    ./Epoch/AwEpochThumbCreator.h 
    ./Epoch/AwEpochAverageWidget.h 
    ./Epoch/AwAverageDialog.h 
    ./Epoch/AwAverageItemWidget.h 
    ./Epoch/AwAvgWorker.h 
    ./Epoch/AwAvgSignalItem.h 
    ./Epoch/AwEditStatsDialog.h 
    ./Epoch/AwStatsModel.h 
    ./Epoch/AwStatChartWidget.h
)
QT5_WRAP_CPP(MOC ${HEADERS})
QT5_ADD_RESOURCES(AnyWave_QRC ${AW_RES_DIR}/AnyWave.qrc)

SET(FORMS ./AnyWave.ui 
    ./AwExportDial.ui 
    ./ICA/AwICAPanel.ui 
    ./ICA/AwPanelItem.ui 
    ./Carto/AwMappingWidget.ui 
    ./Debug/AwDebugLogWidget.ui 
    ./Display/AwChannelSelectionDial.ui 
    ./Display/AwDSMSaveSetupUI.ui 
    ./Display/AwNewViewDial.ui 
    ./Display/AwSaveAsNewSetupDialog.ui 
    ./Filter/AwFilterSettings.ui 
    ./Filter/AwFilterToolBar.ui 
    ./Marker/AwExportMarkersWizard.ui 
    ./Marker/AwMarkerFindReplaceUi.ui 
    ./Marker/AwMarkerManagerSettings.ui 
    ./Marker/AwMarkerRuleManageDial.ui 
    ./Marker/AwMarkerRuleWidget.ui 
    ./Marker/AwNewMarkerRuleDial.ui 
    ./Marker/AwPickChannelsDial.ui 
    ./Marker/AwMarkersExportWidget.ui 
    ./Montage/AwMontageDial.ui 
    ./Plugin/AwPluginDial.ui 
    ./Process/AwProcessesWidget.ui 
    ./Process/AwProcessFromMarkersDial.ui 
    ./Process/TPUi.ui 
    ./Process/AwProcessLogWindow.ui
    ./Process/AwProcessWidget.ui 
    ./Process/AwExporterSettings.ui 
    ./Process/AwExportSelChannels.ui 
    ./Process/AwExporterSelMarkers.ui
    ./Script/AwScriptWidget.ui 
    ./Script/AwScriptsWidget.ui 
    ./Widgets/AwAboutAnyWave.ui 
    ./Widgets/AwCursorMarkerToolBar.ui 
    ./Widgets/AwDisplaySetupToolBar.ui 
    ./Widgets/AwDisplayToolBarv2.ui 
    ./Widgets/AwFilePropertiesDialog.ui 
    ./Widgets/AwFileToolBar.ui 
    ./Widgets/AwMappingToolBar.ui 
    ./Widgets/AwMontageToolBar.ui 
    ./Widgets/AwPleaseWaitWidget.ui 
    ./Widgets/AwTriggerParsingDialog.ui 
    ./Widgets/AwSelectTriggerChannelDialog.ui
    ./Prefs/AwPrefsDial.ui 
    ./Epoch/AwEpochCreateUi.ui 
    ./Epoch/AwEpochVisuWidget.ui 
    ./Epoch/AwEpochThumbNail.ui 
    ./Epoch/AwEpochAverageWidget.ui 
    ./Epoch/AwAverageDialog.ui 
    ./Epoch/AwAverageItemWidget.ui 
    ./Epoch/AwEditStatsDialog.ui)

QT5_WRAP_UI(UI ${FORMS})

# translations
SET(Languages ${AW_RES_DIR}/anywave_fr.ts
${AW_RES_DIR}/awreadwritelib_fr.ts
${AW_RES_DIR}/awwidgetlib_fr.ts)
qt5_create_translation(AnyWaveTS ${Languages})

SET(AW_LIBS AwCore
AwGraphics
AwWidget
AwHDF5
AwReadWrite
AwProcess
AwUtilities
AwLayout
AwMath 
AwMapping 
AwFiltering 
AwMATLAB 
AwEpoch
AwMATLAB)


ADD_EXECUTABLE(AnyWaveLinux ${AnyWave_SRCS} ${MOC} ${UI} ${AnyWave_QRC} ${AnyWave_TS})
QT5_USE_MODULES(AnyWaveLinux Core Gui Network Widgets Xml Concurrent Svg PrintSupport Qml Charts)
SET(QT_LIBS Qt5::Widgets Qt5::Core Qt5::Gui Qt5::Xml Qt5::Network Qt5::Svg Qt5::Concurrent Qt5::PrintSupport Qt5::Qml Qt5::Charts)
TARGET_LINK_LIBRARIES(AnyWaveLinux ${AW_LIBS} ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES}  ${QT_LIBS} ${VTK_LIBRARIES} ${QWT_LIBRARIES} gomp ${MATIO_LIBRARY} ${OpenBLAS_LIB})
add_dependencies(AnyWaveLinux ${AW_LIBS})




