# AnyWave
project(AnyWave)
# disable epoching
add_definitions("-DAW_DISABLE_EPOCHING")

SET(AnyWave_SRCS
./AnyWave.cpp  
	./AwMapping.cpp
	./AwBatch.cpp
	./AwMATLAB.cpp
    ./AwExportDial.cpp  
    ./AwNoGUI.cpp  
    ./AwUpdater.cpp  
    ./AwOpenFileDialog.cpp
    ./main.cpp  
	./AwFileOpenSave.cpp
	./Batch/AwAddEditBatchDialog.cpp
	./Batch/AwBatchManager.cpp
	./Batch/AwBatchGUI.cpp
	./Batch/AwBatchItem.cpp
	./Batch/AwBatchModel.cpp
	./Batch/AwBatchFileInputWidget.cpp
	./Batch/AwBatchDialog.cpp
	./Batch/AwBatchRunner.cpp
    ./CL/CommandLineParser.cpp
    ./CL/AwCommandLogger.cpp
    ./CL/AwCommandLineManager.cpp
    ./CL/AwRunProcess.cpp
	./CL/DedicatedDataServer.cpp
    ./Data/AwDataConnection.cpp  
    ./Data/AwDataServer.cpp  
	./Data/AwMemoryMapper.cpp  
	./Data/AwDataChunk.cpp
	./Data/AwDataSet.cpp
    ./Carto/AwDockMapping.cpp  
    ./Carto/AwMappingClient.cpp  
    ./Carto/AwMappingWidget.cpp  
    ./Debug/AwDebugLog.cpp  
    ./Debug/AwDebugLogWidget.cpp  
    ./Display/AwCentralWidget.cpp  
    ./Display/AwChannelSelectionDial.cpp  
    ./Display/AwChannelSelectionModel.cpp  
    ./Display/AwDisplay.cpp  
    ./Display/AwDisplaySetup.cpp  
    ./Display/AwDisplaySetupManager.cpp  
    ./Display/AwDSMSaveSetupUI.cpp  
    ./Display/AwNewViewDial.cpp  
    ./Display/AwSaveAsNewSetupDialog.cpp  
    ./Display/AwScene.cpp  
    ./Display/AwSignalView.cpp  
    ./Display/AwViewSetup.cpp  
    ./Display/AwVideoManager.cpp  
    ./Filter/AwFilterToolBar.cpp  
    ./IO/ADES/ADESIO.cpp  
    ./IO/HDF5/HDF5IO.cpp  
    ./IO/HDF5/structs.cpp  
    ./IO/MATLAB/MATLABIO.cpp  
    ./IO/BIDS/AwBIDSGUI.cpp  
    ./IO/BIDS/AwBIDSItem.cpp  
    ./IO/BIDS/AwBIDSManager.cpp  
	./IO/BIDS/AwBIDSGUIOptionsDialog.cpp
	./IO/BIDS/AwBIDSConvert.cpp
	./IO/BIDS/AwBIDSTsv.cpp
	./IO/MEMIO/MEMIO.cpp
    ./Marker/AwDockAddMarker.cpp  
    ./Marker/AwExtractTriggers.cpp  
    ./Marker/AwMarkerListModel.cpp  
    ./Marker/AwMarkerManager.cpp  
    ./Marker/AwMarkerManagerSettings.cpp  
    ./Marker/AwMarkerRule.cpp  
    ./Marker/AwMarkerRuleElement.cpp  
    ./Marker/AwMarkerRuleManageDial.cpp  
    ./Marker/AwMarkerRuleWidget.cpp  
    ./Marker/AwMarkersExportWidget.cpp  
    ./Marker/AwMarkerTableView.cpp  
    ./Marker/AwNewMarkerRuleDial.cpp  
    ./Marker/AwPickChannelsDial.cpp  
    ./MATPy/AddMarkers.cpp  
    ./MATPy/AwMATPyServer.cpp  
    ./MATPy/AwPidManager.cpp  
    ./MATPy/AwRequestServer.cpp  
    ./MATPy/GetData.cpp  
    ./MATPy/GetFileInfo.cpp  
    ./MATPy/GetICAPanelCapture.cpp  
    ./MATPy/GetMarkers.cpp
    ./MATPy/AwGetMarkersEx.cpp    
    ./MATPy/GetPluginInfo.cpp  
    ./MATPy/GetScreenCapture.cpp  
    ./MATPy/GetTriggers.cpp  
    ./MATPy/IsTerminated.cpp  
    ./MATPy/SendCommand.cpp  
    ./MATPy/SendMessage.cpp  
    ./MATPy/SetBeamFormer.cpp
    ./MATPy/GetDataEx.cpp
    ./MATPy/GetPluginIO.cpp  
	./MATPy/OpenNewFile.cpp
    ./MATPy/AwTCPResponse.cpp
	./MATPy/RunAnyWave.cpp
	./MATPy/GetProperties.cpp
    ./Montage/AwChannelListModel.cpp  
    ./Montage/AwMontageDial.cpp  
    ./Montage/AwMontageManager.cpp  
    ./Montage/AwMontageTableView.cpp  
    ./Montage/AwECoGDialog.cpp 
    ./Montage/AwECoGGrid.cpp 
    ./Montage/AwECoGTableModel.cpp 
    ./Plugin/AwPluginDial.cpp  
    ./Plugin/AwPluginManager.cpp  
    ./Process/AwConverter.cpp  
    ./Process/AwExporter.cpp  
    ./Process/AwExporterMarkerModel.cpp  
    ./Process/AwExporterSelMarkers.cpp  
    ./Process/AwExporterSettings.cpp  
    ./Process/AwExportSelChannels.cpp  
    ./Process/AwMarkerExporter.cpp  
    ./Process/AwMatlabScriptPlugin.cpp  
    ./Process/AwProcessesWidget.cpp  
    ./Process/AwProcessFromMarkersDial.cpp  
    ./Process/AwProcessLog.cpp  
    ./Process/AwProcessLogManager.cpp  
    ./Process/AwProcessLogWindow.cpp  
    ./Process/AwProcessManager.cpp  
    ./Process/AwProcessMarkerModel.cpp  
    ./Process/AwProcessWidget.cpp  
    ./Process/AwProgressIndicator.cpp  
    ./Process/AwPythonScriptPlugin.cpp  
    ./Process/AwScriptPlugin.cpp  
    ./Process/AwTriggerEraser.cpp  
    ./Process/AwTriggerParser.cpp  
    ./Process/AwTriggerWriter.cpp  
    ./Process/TPUi.cpp  
    ./Process/AwLogPlainTextEdit.cpp
    ./Process/AwMATLABMarkersExporter.cpp 
    ./Widgets/AwAboutAnyWave.cpp  
    ./Widgets/AwCursorMarkerToolBar.cpp  
    ./Widgets/AwDisplaySetupToolBar.cpp  
    ./Widgets/AwDisplayToolBar.cpp  
    ./Widgets/AwFilePropertiesDialog.cpp  
    ./Widgets/AwFilePropertiesModel.cpp  
    ./Widgets/AwFileToolBar.cpp  
    ./Widgets/AwMappingToolBar.cpp  
    ./Widgets/AwMarkersBar.cpp  
    ./Widgets/AwMontageRefWidget.cpp  
    ./Widgets/AwMontageToolBar.cpp  
    ./Widgets/AwPleaseWaitWidget.cpp  
    ./Widgets/AwSelectTriggerChannelDialog.cpp  
    ./Widgets/AwTriggerParsingDialog.cpp  
	./Widgets/AwVideoSettingsDial.cpp
    ./ICA/AwICAChannel.cpp  
    ./ICA/AwICAComponents.cpp  
    ./ICA/AwICAManager.cpp  
    ./ICA/AwICAPanel.cpp  
    ./ICA/AwICARejectButton.cpp  
    ./ICA/AwICASignalItem.cpp  
    ./ICA/AwMappingButton.cpp  
    ./ICA/AwPanelItem.cpp  
    ./Prefs/AwPreferences.cpp  
    ./Prefs/AwPrefsDial.cpp  
    ./Prefs/AwSettings.cpp  
    ./Source/AwSourceChannel.cpp  
    ./Source/AwSourceManager.cpp)  

SET(HEADERS 	./Batch/AwAddEditBatchDialog.h
	./Batch/AwBatchDialog.h
	./Batch/AwBatchGUI.h
	./Batch/AwBatchManager.h
	./Batch/AwBatchItem.h
	./Batch/AwBatchModel.h
	./Batch/AwBatchFileInputWidget.h
	./Batch/AwBatchRunner.h
	./Data/AwDataConnection.h  
    ./Data/AwDataServer.h  
	./Data/AwMemoryMapper.h  
	./Data/AwDataChunk.h
	./Data/AwDataSet.h
    ./Carto/AwDockMapping.h  
    ./Carto/AwMappingWidget.h  
    ./Carto/AwMappingClient.h  
    ./Debug/AwDebugLogWidget.h  
    ./Debug/AwDebugLog.h  
    ./Display/AwViewSetup.h  
    ./Display/AwCentralWidget.h  
    ./Display/AwSignalView.h  
    ./Display/AwScene.h  
    ./Display/AwSaveAsNewSetupDialog.h  
    ./Display/AwNewViewDial.h  
    ./Display/AwDSMSaveSetupUI.h  
    ./Display/AwDisplaySetupManager.h  
    ./Display/AwDisplaySetup.h  
    ./Display/AwDisplay.h  
    ./Display/AwChannelSelectionModel.h  
    ./Display/AwChannelSelectionDial.h  
    ./Display/AwVideoManager.h  
    ./Filter/AwFilterToolBar.h  
    ./IO/ADES/ADESIO.h  
    ./IO/HDF5/structs.h  
    ./IO/HDF5/HDF5IO.h  
    ./IO/MATLAB/MATLABIO.h  
    ./IO/BIDS/AwBIDSItem.h  
    ./IO/BIDS/AwBIDSManager.h  
    ./IO/BIDS/AwBIDSGUI.h  
	./IO/BIDS/AwBIDSGUIOptionsDialog.h
	./IO/MEMIO/MEMIO.h
    ./Marker/AwExtractTriggers.h  
    ./Marker/AwMarkersExportWidget.h  
    ./Marker/AwPickChannelsDial.h  
    ./Marker/AwNewMarkerRuleDial.h  
    ./Marker/AwMarkerTableView.h  
    ./Marker/AwMarkerRuleWidget.h  
    ./Marker/AwMarkerRuleManageDial.h  
    ./Marker/AwMarkerRuleElement.h  
    ./Marker/AwMarkerRule.h  
    ./Marker/AwMarkerManagerSettings.h  
    ./Marker/AwMarkerManager.h  
    ./Marker/AwMarkerListModel.h  
    ./Marker/AwDockAddMarker.h  
    ./MATPy/AwResponse.h  
    ./MATPy/AwPidManager.h  
    ./MATPy/AwRequestServer.h  
    ./MATPy/AwMATPyServer.h  
    ./Montage/AwMontageTableView.h  
    ./Montage/AwMontageManager.h  
    ./Montage/AwMontageDial.h  
    ./Montage/AwChannelListModel.h  
    ./Montage/AwECoGDialog.h 
    ./Montage/AwECoGTableModel.h 
    ./Plugin/AwPluginManager.h  
    ./Plugin/AwPluginDial.h  
    ./Process/AwExporterTypes.h  
    ./Process/AwMarkerExporter.h  
    ./Process/AwTriggerWriter.h  
    ./Process/AwTriggerEraser.h  
    ./Process/AwProcessLogManager.h  
    ./Process/AwProcessLog.h  
    ./Process/AwExporter.h  
    ./Process/AwExporterSettings.h  
    ./Process/AwExportSelChannels.h  
    ./Process/AwExporterSelMarkers.h  
    ./Process/AwExporterMarkerModel.h  
    ./Process/AwProcessLogWindow.h  
    ./Process/AwProcessWidget.h  
    ./Process/TPUi.h  
    ./Process/AwTriggerParser.h  
    ./Process/AwScriptPlugin.h  
    ./Process/AwPythonScriptPlugin.h  
    ./Process/AwProgressIndicator.h  
    ./Process/AwProcessMarkerModel.h  
    ./Process/AwProcessManager.h  
    ./Process/AwProcessFromMarkersDial.h  
    ./Process/AwProcessesWidget.h  
    ./Process/AwMatlabScriptPlugin.h  
    ./Process/AwConverter.h  
    ./Process/AwLogPlainTextEdit.h 
    ./Process/AwMATLABMarkersExporter.h 
    ./Widgets/AwSelectTriggerChannelDialog.h  
    ./Widgets/AwTriggerParsingDialog.h  
    ./Widgets/AwPleaseWaitWidget.h  
    ./Widgets/AwMontageToolBar.h  
    ./Widgets/AwMontageRefWidget.h  
    ./Widgets/AwMarkersBar.h  
    ./Widgets/AwMappingToolBar.h  
    ./Widgets/AwFileToolBar.h  
    ./Widgets/AwFilePropertiesModel.h  
    ./Widgets/AwFilePropertiesDialog.h  
    ./Widgets/AwDisplayToolBar.h  
    ./Widgets/AwDisplaySetupToolBar.h  
    ./Widgets/AwCursorMarkerToolBar.h  
    ./Widgets/AwAboutAnyWave.h  
	./Widgets/AwVideoSettingsDial.h
    ./ICA/AwICAChannel.h  
    ./ICA/AwMappingButton.h  
    ./ICA/AwICAPanel.h  
    ./ICA/AwPanelItem.h  
    ./ICA/AwICAManager.h  
    ./ICA/AwICAComponents.h  
    ./ICA/AwICASignalItem.h  
    ./ICA/AwICARejectButton.h  
    ./AwOpenFileDialog.h
    ./AwUpdater.h  
    ./AwExportDial.h  
    ./AnyWave.h  
    ./CL/AwCommandLogger.h
    ./Prefs/AwPreferences.h  
    ./Prefs/AwSettings.h  
    ./Prefs/AwPrefsDial.h  
    ./Source/AwSourceChannel.h  
    ./Source/AwSourceManager.h)  

QT5_WRAP_CPP(MOC ${HEADERS})
QT5_ADD_RESOURCES(AnyWave_QRC ${AW_RES_DIR}/AnyWave.qrc)

SET(FORMS ./AnyWave.ui  
    ./AwExportDial.ui  
	./Batch/AwAddEditBatchDialog.ui
	./Batch/AwBatchGUI.ui
	./Batch/AwBatchFileInputWidget.ui
	./Batch/AwBatchDialog.ui
	./IO/BIDS/AwBIDSGUI.ui
	./IO/BIDS/AwBIDSGUIOptionsDialog.ui
    ./ICA/AwICAPanel.ui  
    ./ICA/AwPanelItem.ui  
    ./Carto/AwMappingWidget.ui  
    ./Debug/AwDebugLogWidget.ui  
    ./Display/AwChannelSelectionDial.ui  
    ./Display/AwDSMSaveSetupUI.ui  
    ./Display/AwNewViewDial.ui  
    ./Display/AwSaveAsNewSetupDialog.ui  
    ./Filter/AwFilterToolBar.ui  
    ./IO/BIDS/AwBIDSGUI.ui  
    ./Marker/AwExportMarkersWizard.ui  
    ./Marker/AwMarkerManagerSettings.ui  
    ./Marker/AwMarkerRuleManageDial.ui  
    ./Marker/AwMarkerRuleWidget.ui  
    ./Marker/AwNewMarkerRuleDial.ui  
    ./Marker/AwPickChannelsDial.ui  
    ./Marker/AwMarkersExportWidget.ui  
    ./Montage/AwMontageDial.ui  
	./Montage/AwECoGDialog.ui
    ./Plugin/AwPluginDial.ui  
    ./Process/AwProcessesWidget.ui  
    ./Process/AwProcessFromMarkersDial.ui  
    ./Process/TPUi.ui  
    ./Process/AwProcessLogWindow.ui  
    ./Process/AwProcessWidget.ui  
    ./Process/AwExporterSettings.ui  
    ./Process/AwExportSelChannels.ui  
    ./Process/AwExporterSelMarkers.ui  
    ./Widgets/AwAboutAnyWave.ui  
    ./Widgets/AwCursorMarkerToolBar.ui  
    ./Widgets/AwDisplaySetupToolBar.ui  
    ./Widgets/AwDisplayToolBarv2.ui  
    ./Widgets/AwFilePropertiesDialog.ui  
    ./Widgets/AwFileToolBar.ui  
    ./Widgets/AwMappingToolBar.ui  
    ./Widgets/AwMontageToolBar.ui  
    ./Widgets/AwPleaseWaitWidget.ui  
    ./Widgets/AwTriggerParsingDialog.ui  
    ./Widgets/AwSelectTriggerChannelDialog.ui  
	./Widgets/AwVideoSettingsDial.ui
    ./Prefs/AwPrefsDial.ui)  

QT5_WRAP_UI(UI ${FORMS})

SET(AW_LIBS AwCore AwMontage
AwGraphics
AwWidget
AwMontage
AwHDF5
AwReadWrite
AwProcess
AwUtilities
AwLayout
AwMath 
AwMapping
AwFiltering 
AwMATLAB 
AwEpoch
AwMATLAB)


ADD_EXECUTABLE(AnyWaveLinux ${AnyWave_SRCS} ${MOC} ${UI} ${AnyWave_QRC})
QT5_USE_MODULES(AnyWaveLinux Core Gui Network Widgets Xml Concurrent Svg PrintSupport Qml)
SET(QT_LIBS Qt5::Widgets Qt5::Core Qt5::Gui Qt5::Xml Qt5::Network Qt5::Svg Qt5::Concurrent Qt5::PrintSupport Qt5::Qml)
#TARGET_LINK_LIBRARIES(AnyWaveLinux ${AW_LIBS} ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES}  ${QT_LIBS} ${VTK_LIBRARIES} ${QWT_LIBRARIES} gomp ${MATIO_LIBRARY} ${OpenBLAS_LIB})

TARGET_LINK_LIBRARIES(AnyWaveLinux ${AW_LIBS} ${QT_LIBS} ${VTK_LIBRARIES} ${QWT_LIBRARIES} gomp ${MATIO_LIBRARY} ${BLAS_LIBRARIES} z)
add_dependencies(AnyWaveLinux ${AW_LIBS})

INSTALL(TARGETS AnyWaveLinux PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_READ WORLD_EXECUTE DESTINATION ${CMAKE_INSTALL_PREFIX}) 





