# HDF5Lib
project(AwHDF5)
add_definitions("-DAW_BUILD_HDF5_LIB")
INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
add_library(AwHDF5 SHARED AwHDF5.cpp)
qt5_use_modules(AwHDF5 Core)
TARGET_LINK_LIBRARIES(AwHDF5 AwCore Qt5::Core ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES})
IF (APPLE)
INSTALL(TARGETS AwHDF5 DESTINATION  ${LIB_INSTALL_DIR})
ELSE()
INSTALL(TARGETS AwHDF5 DESTINATION  ${CMAKE_INSTALL_PREFIX}/lib)
ENDIF()
