# AwMathLib
project(AwMath)
add_definitions("-DAW_BUILD_MATH_LIB")
INCLUDE_DIRECTORIES(${MKL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ARMADILLO_INCLUDE})
add_library(AwMath SHARED AwMath.cpp AwSpline2D.cpp)
QT5_USE_MODULES(AwMath Core)
TARGET_LINK_LIBRARIES(AwMath AwCore Qt5::Core ${BLAS_LIBRARIES})

IF (APPLE)
INSTALL(TARGETS AwMath DESTINATION  ${LIB_INSTALL_DIR})
ELSE()
INSTALL(TARGETS AwMath DESTINATION  ${CMAKE_INSTALL_PREFIX}/lib)
ENDIF()


