# AwMATLABLib
project(AwMATLAB)
add_definitions("-DAW_BUILD_MATLAB_LIB")
SET(MOCS ${CMAKE_SOURCE_DIR}/include/AwMATLAB.h)
QT5_WRAP_CPP(AwMATLABMOC ${MOCS})
ADD_LIBRARY(AwMATLAB SHARED ${AwMATLABMOC} AwMATLABFile.cpp AwMatlabLib.cpp)
QT5_USE_MODULES(AwMATLAB Core)
TARGET_LINK_LIBRARIES(AwMATLAB Qt5::Core AwMath AwCore ${MATIO_LIBRARY})
INSTALL(TARGETS AwMATLAB DESTINATION  ${CMAKE_INSTALL_PREFIX}/lib)
